--- a/_posts/2017-11-12-test-page.md
+++ b/_posts/2017-11-12-test-page.md
@@ -1,6 +1,6 @@
 ---
-layout: post
-title:  "Test"
+#layout: post
+title:  "한글 타이틀이 먹히나"
 date:   2017-11-12 16:16:01 -0900
 categories: jekyll update
 ---
