--- a/_posts/2017-11-12-test-page.md
+++ b/_posts/2017-11-12-test-page.md
@@ -4,10 +4,9 @@ title:  "한글 타이틀이 먹히나"
 date:   2017-11-12 16:16:01 -0900
 categories: jekyll update
 ---
+asdfkajlsdkjf laksdj flaksjd flaksjd flaksj dlfkja sdlfk jasldkjf alsdkj flkajsd flka jsdlfkajs dlfk jasldkfj laskdjf laksdj flaksjdflkajsd flka jsdlfkajsd lfkja s
 
-Test
-
-{% highlight c %}
+```c
 #include <stdio.h>
 
 int main(int argc, char **argv) {
@@ -15,4 +14,4 @@ int main(int argc, char **argv) {
   
   return 0;
 }
-{% endhighlight %}
+```
