removed unnecessary -lnosys option

--- a/_posts/aapcs/2017-11-17-aapcs-in-c.md
+++ b/_posts/aapcs/2017-11-17-aapcs-in-c.md
@@ -24,7 +24,7 @@ void NO_RET_NO_ARG_LEAF() {
 간단한 코드다. `NO_RET_NO_ARG_NO_LEAF()`에서 `NO_RET_NO_ARG_LEAF()`을 호출한다. `NO_RET_NO_ARG_LEAF()`은 이름처럼 Leaf Function이라 아무것도 호출하지 않는다.
 
 ```
-$ arm-none-eabi-gcc -lnosys -g3 -O0 -c leaf_no_leaf.c
+$ arm-none-eabi-gcc -g3 -O0 -c leaf_no_leaf.c
 ```
 컴파일을 할 때는 `-g3`으로 디버그 info를 최대한 많이 생성해주고, `-O0`으로 방금 작성한 아무짝에도 쓸모없는 코드가 진짜 아무짝에도 쓸모없는 취급을 받아 버려지지 안도록 해준다. 아무짝에도 쓸모 없지만 예제로써 쓸모있으니까.
 ```
