--- a/_posts/stm32l432/2018-02-16-stm32l432-flash.md
+++ b/_posts/stm32l432/2018-02-16-stm32l432-flash.md
@@ -15,7 +15,7 @@ MCU로 뭔가 만들다 보면 전원이 나가도 설정 값이 영구적으로
 * 한번에 최소 64 Bit를 기록해야 한다.
 
 ## Flash 주소 Linker Script
-Flash Memory에 뭔가를 저장 하려면 한 페이지를 다 날리고 해야하기 때문에 잘 못 하면 Code나 Data영역이 날아가 버려서 프로그램이 뻗어 버릴 수 있으다. 그런 문제를 방지하기 위해서 저장 전용으로 사용할 Page를 확보 해야 한다. 귀찮으면 대충 마지막 페이지인 127번 Page를 사용하면 된다. 이 방법도 상당히 괜찮은 방법이다. 어차피 마지막 페이지까지 Code, Data 영역으로 사용할 정도로 프로그램 이미지가 크다면 외부 저장 모듈이 꼭 필요하다.
+Flash Memory에 뭔가를 저장 하려면 먼저 해당 Page를 다 날려야 하기 때문에 잘 못 하면 Code나 Data영역이 날아가 버려서 프로그램이 뻗어 버릴 수 있다. 그런 문제를 방지하기 위해서 저장 전용으로 사용할 Page를 확보 해야 한다. 귀찮으면 대충 마지막 페이지인 127번 Page를 사용하면 된다. 게으른 방법 같지만 사실 이 방법도 상당히 괜찮은 방법이다. 어차피 마지막 페이지까지 Code, Data 영역으로 사용할 정도로 프로그램 이미지가 크다면 외부 저장 모듈이 꼭 필요하다.
 
 무작정 마지막 Page를 사용하도록 Hard Coding 하는 방법 보다 좀 더 있어 보이게 하고 싶으면 Linker Script를 건드리는 방법이 있다. Code와 Data 등을 다 Link한 후에 2kb Align된 Section을 하나 추가하고 Symbol을 성정해서 C 코드에서 그 Symbol 주소를 기반으로 Page 번호를 계산하면 된다. 
 
