--- a/_posts/stm32l432/2018-02-16-stm32l432-pwm-piezzo.md
+++ b/_posts/stm32l432/2018-02-16-stm32l432-pwm-piezzo.md
@@ -18,7 +18,7 @@ CubeMX로 그림과 같이 TIM2의 PWM을 설정하고 Code를 생성해준다.
 ![Piezzo Wire]({{"/assets/images/pwm_piezzo_cubemx.png" | absolute_url }} "PWM Piezzo Wiring"){:border="1"}
 
 # Code
-CubeMX에서 생성 된 코드의 `main()`함수에 아래 코드를 넣어준다. CubeMX에서 생성 된 코드 중 사용자 코드는 `/* USER CODE BEGIN XXX */` 이런 식으로 위치가 정해져 있으니 해당 위이체 잘 넣어주면 된다.
+CubeMX에서 생성 된 코드의 `main()`함수에 아래 코드를 넣어준다. CubeMX에서 생성 된 코드 중 사용자 코드는 `/* USER CODE BEGIN XXX */` 이런 식으로 위치가 정해져 있으니 해당 위치에 잘 넣어주면 된다.
 ```c
   /* USER CODE BEGIN 2 */
 
