--- a/_posts/2018-05-26-lsm303-stm32-hal.md
+++ b/_posts/2018-05-26-lsm303-stm32-hal.md
@@ -13,6 +13,25 @@ It's not test against other chips but it should work after changing include file
 ...
 ```
 
+# Example
+```c
+    lsm303dlhc_read_la_b(&hi2c1, recv);
+    x = recv[1] << 8 | recv[0];
+    y = recv[3] << 8 | recv[2];
+    z = recv[5] << 8 | recv[4];
+
+    sprintf(buf, "%5d LA: %6d %6d %6d", count++, x, y, z);
+
+    ...
+
+    lsm303dlhc_read_mf_b(&hi2c1, recv);
+    x = recv[0] << 8 | recv[1];
+    y = recv[2] << 8 | recv[3];
+    z = recv[4] << 8 | recv[5];
+
+    sprintf(buf, ", MF: %6d %6d %6d\r\n", x, y, z);
+```
+
 # i2c Sequential Transfer
 The datasheet sounds like we have to use sequential transfer. i.e. Master transmit without stop condition and restart condition with direction change for reading.
 
